A lot of cleaning, minor fixes and some documentation, comments etc.

--- a/00_init.ipynb
+++ b/00_init.ipynb
@@ -27,42 +27,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 00_init.ipynb.\n",
-      "Converted 01_graph.ipynb.\n",
-      "Converted 02_tree.ipynb.\n",
-      "Converted 03_synteny.ipynb.\n",
-      "Converted 04_utils.ipynb.\n",
-      "Converted 05_export.ipynb.\n",
-      "Converted deBruijnGraphProcessing.ipynb.\n",
-      "Converted index.ipynb.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#| include: false\n",
-    "from nbdev.showdoc import *\n",
-    "from nbdev.export import notebook2script\n",
-    "notebook2script()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# from pangraph_constructor.synteny import *"
+    "#| include: false\n",
+    "from nbdev import nbdev_export\n",
+    "nbdev_export()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
