--- a/02_tree.ipynb
+++ b/02_tree.ipynb
@@ -38,26 +38,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 00_init.ipynb.\n",
-      "Converted 01_graph.ipynb.\n",
-      "Converted 02_tree.ipynb.\n",
-      "Converted 03_synteny.ipynb.\n",
-      "Converted 04_utils.ipynb.\n",
-      "Converted 05_export.ipynb.\n",
-      "Converted index.ipynb.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| include: false\n",
-    "from nbdev.showdoc import *\n",
-    "from nbdev.export import notebook2script\n",
-    "notebook2script()"
+    "from nbdev import nbdev_export\n",
+    "nbdev_export()"
    ]
   },
   {
@@ -70,21 +55,11 @@
     "import numpy as np\n",
     "from copy import deepcopy\n",
     "\n",
-    "import pdb\n",
-    "\n",
     "import networkx as nx\n",
-    "from networkx.algorithms.operators.binary import compose\n",
-    "from networkx import NetworkXNoPath,NetworkXNoCycle\n",
+    "from networkx import NetworkXNoPath\n",
     "\n",
-    "from pangraph_constructor.utils import bidict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from pangraph_constructor.utils import bidict\n",
+    "\n",
     "import warnings"
    ]
   },
@@ -114,6 +89,13 @@
    "source": [
     "#| export\n",
     "class TremauxTree(nx.DiGraph):\n",
+    "    '''\n",
+    "    This is the main class for manipulation of special type of Tremaux tree, which is used purely by GenomeGraph class.\n",
+    "    \n",
+    "    At the moment, I do not see scenario in which a package user will use this class separately, so, the documentation for its API\n",
+    "    is low priority.\n",
+    "    '''\n",
+    "    \n",
     "    def __init__(self,graphToTree=None,parentGraph=None,byPath=True,**attr):\n",
     "        if graphToTree is None:\n",
     "            super().__init__(**attr)\n",
@@ -142,84 +124,19 @@
     "                    self.add_edge(upNode,root)\n",
     "                    self.bubbleEdges.remove(upNode,root)\n",
     "                    self.startingNodes.remove(root)\n",
-    "    # unused?\n",
-    "    def _getNodeStartFit(self):\n",
-    "        nodeStartTest = []\n",
-    "        for node in range(1,len(self.parentGraph.nodes)+1):\n",
-    "            nodeStartTest.append(self.parentGraph.pathStarts[node-1] - \\\n",
-    "                                 max([pathN for edge,pathN in self.parentGraph.edgePaths.items() if edge[1]==node],default=0))\n",
-    "        return nodeStartTest\n",
     "            \n",
     "    def _generateTree(self,byPath=True):\n",
-    "#         if byPath:\n",
-    "#             inEdge = self.parentGraph.inPath\n",
-    "#             outEdge = self.parentGraph.outPath\n",
-    "#             nodeStartPath = self._getNodeStartFit()\n",
-    "#             startingNodes = np.where(nodeStartPath==np.max(nodeStartPath))[0]+1\n",
-    "#         else:\n",
-    "#             inEdge = self.originalGraph.in_degree\n",
-    "#             outEdge = self.originalGraph.out_degree\n",
-    "#             startingNodes = np.arange(1,len(inEdge)+1)\n",
-    "        \n",
-    "#         selectedOutPaths = np.array(outEdge)[startingNodes-1]    \n",
-    "#         self.startingNodes = startingNodes[np.where(selectedOutPaths==np.max(selectedOutPaths))]\n",
-    "#         selectedInPaths = np.array(inEdge)[startingNodes-1]\n",
-    "#         self.startingNodes = startingNodes[np.where(selectedInPaths==np.min(selectedInPaths))].tolist()\n",
-    "#         self.startingNodes = set(self.startingNodes)\n",
-    "#         self.startingNodes.update((np.where(np.array(inEdge)==0)[0]+1).tolist())\n",
-    "#         self.startingNodes = list(self.startingNodes)\n",
-    "# #         self.startingNodes.sort(key=[self.parentGraph.pathStarts[node] for node in self.startingNodes])\n",
-    "        \n",
     "        tremauxTree = nx.dfs_tree(self.originalGraph)\n",
     "        \n",
     "        self.startingNodes = []\n",
-    "        \n",
-    "        \n",
-    "            \n",
-    "#         if len(self.startingNodes)>0:\n",
-    "#             treeCombined = nx.DiGraph()\n",
-    "#             for startNode in self.startingNodes:\n",
-    "#                 if startNode not in treeCombined:\n",
-    "#                     treeCombined = compose(treeCombined,nx.dfs_tree(self.originalGraph,source=startNode))\n",
     "            \n",
     "        if byPath:\n",
-    "#                 preprocessIter = 1\n",
     "            self._preprocessPathTree(tremauxTree)\n",
-    "#                 try:\n",
-    "#                     nx.find_cycle(treeCombined,orientation='original')\n",
-    "#                     raise RuntimeError(f'Found cycle in tree after preprocessing')\n",
-    "#                 except NetworkXNoCycle:\n",
-    "#                     pass\n",
-    "\n",
-    "#                 accessibleNodes = set()\n",
-    "#                 for rootNode in self.startingNodes:\n",
-    "#                     accessibleNodes = accessibleNodes.update(list(nx.dfs_preorder_nodes(treeCombined,source=rootNode)))\n",
-    "\n",
-    "#                 assert len(accessibleNodes)==len(self.parentGraph.nodes)\n",
-    "\n",
-    "#                 incorrectEdges = [(node,len(treeCombined.in_edges(node))) \\\n",
-    "#                                   for node in accessibleNodes \\\n",
-    "#                                   if len(treeCombined.in_edges(node))>1]\n",
-    "#                 if len(incorrectEdges)>0:\n",
-    "#                     print(f'Nodes with more than 1 in edges: {incorrectEdges}')\n",
-    "#                 assert len(incorrectEdges)==0\n",
-    "\n",
-    "#                 print(f'Preprocessing run {preprocessIter:02d}')\n",
-    "#                 while True:\n",
-    "#                     try:\n",
-    "#                         nx.find_cycle(treeCombined,orientation='original')\n",
-    "#                     except NetworkXNoCycle:\n",
-    "#                         break\n",
-    "#                     preprocessIter += 1\n",
-    "#                     self._preprocessPathTree(treeCombined)\n",
-    "#                     print(f'Preprocessing run {preprocessIter:02d}')\n",
     "        else:\n",
     "            for toNode,numDeg in tremauxTree.in_degree:\n",
     "                if numDeg>1:\n",
     "                    for fromNode,_ in list(tremauxTree.in_edges(nbunch=toNode))[1:]:\n",
     "                        tremauxTree.remove_edge(edge,toNode)\n",
-    "#         else:\n",
-    "#             raise ValueError(\"Something went wrong. I cannot find a single suitable starting node. It seems there is no nodes in the graph.\")\n",
     "        \n",
     "        for treeNum,tree in enumerate(nx.weakly_connected_components(tremauxTree)):\n",
     "            subgraphNode = next(iter(tree))\n",
@@ -235,15 +152,12 @@
     "        \n",
     "        return tremauxTree\n",
     "    \n",
-    "    # unused\n",
     "    def _preprocessPathTree(self,treeCombined):\n",
     "        processedNodes = []\n",
     "        \n",
     "        dfsNodeOrder = list(nx.dfs_preorder_nodes(treeCombined))\n",
     "        \n",
     "        for nodeNum,node in enumerate(dfsNodeOrder):\n",
-    "#             if node==4006:\n",
-    "#                 pdb.set_trace()\n",
     "            \n",
     "            print(f'\\rPreprocessing tree {(nodeNum+1)/len(dfsNodeOrder)*100:0.0f}%',end='')\n",
     "    \n",
@@ -256,20 +170,10 @@
     "                # treeInEdgeList can be either 1 edge or zero (in the tree only one incoming edge is allowed)\n",
     "                treeInEdgeList = list(treeCombined.in_edges(node))\n",
     "            except nx.NetworkXError:\n",
-    "                # treeInEdgeList = []\n",
     "                warnings.warn(f\"Node {node} in the Tremaux tree does not have any incoming edges. \\\n",
     "                Only root node(s) are allowed to have no incoming edges. If it is not an intended root node,\\\n",
     "                then it is an error and you have inaccessible nodes in the tree (which will fail sorting later).\")\n",
     "                continue\n",
-    "            \n",
-    "#             if len(treeInEdgeList)>1:\n",
-    "#                 raise RuntimeError(f\"The node {node} in the Tremaux tree have more than one incoming edge,\\\n",
-    "#                 which is contradictory to the definition of the Tremaux tree. Something went wrong!\")\n",
-    "            \n",
-    "            # Because there can be only one (or none) incoming edge to every node in Tremaux tree, we extract it.\n",
-    "#             treeInEdge = treeInEdgeList[0]\n",
-    "            # And calculate its value (number of paths passing through this edge)\n",
-    "#             treeInEdgeValue = self.parentGraph.edgePathsUnique.get(treeInEdge,0)\n",
     "            \n",
     "            # Remove self-cycle or reverse (cycle making) paths larger cycles will be removed later.\n",
     "            graphInEdgeList = [edge for edge in graphInEdgeList if edge[0]!=node]\n",
@@ -288,19 +192,13 @@
     "                \n",
     "                edgeToKeepValue = graphInEdgeValueList[edgeToKeepInd]\n",
     "                if nx.has_path(treeCombined,edgeToKeep[1],edgeToKeep[0]):\n",
-    "#                     print(f'Node: {node}')\n",
-    "#                     print(f'Graph edges: {graphInEdgeList}')\n",
-    "#                     print(f'Tree edge: {treeInEdgeList}')\n",
-    "#                     print(f'Edge to keep: {edgeToKeep}')\n",
     "\n",
-    "#                     print('Cycle found!')\n",
     "                    # Get all posible cycle path:\n",
     "                    edgesToRemove = []\n",
     "                    edgesToAdd = []\n",
     "                    breakSubstitute = False\n",
     "\n",
     "                    for path in nx.all_shortest_paths(treeCombined,edgeToKeep[1],edgeToKeep[0]):\n",
-    "#                         print(f'Path to break: {path}')\n",
     "                        if len(path)==2 and list(edgeToKeep[::-1])==path:\n",
     "                            if path[1] not in processedNodes:\n",
     "                                edgesToRemove.append(path)\n",
@@ -313,15 +211,11 @@
     "                                edgesToRemove.append(pathBreakpoint[0])\n",
     "                                edgesToAdd.append(pathBreakpoint[1])\n",
     "                            else:\n",
-    "#                                 print('Unbreakable path!')\n",
     "                                breakSubstitute = True\n",
     "                                break\n",
     "\n",
     "                    if not breakSubstitute:\n",
-    "#                         print('Edge substituted!')\n",
     "                        self._substituteEdges(treeCombined,[edgeToKeep],treeInEdgeList)\n",
-    "#                             for edgeToRemove,edgeToAdd in zip(edgesToRemove,edgesToAdd):\n",
-    "#                         print(f'Edges {edgesToAdd} added instead of {edgesToRemove}')\n",
     "                        self._substituteEdges(treeCombined,edgesToAdd,edgesToRemove)\n",
     "                        break\n",
     "                    else:\n",
@@ -330,7 +224,7 @@
     "                    self._substituteEdges(treeCombined,[edgeToKeep],treeInEdgeList)\n",
     "                    break\n",
     "        print()\n",
-    "    #unused\n",
+    "    \n",
     "    def _severePathPoint(self,G,path,newEdgeValue,processedNodes):\n",
     "        '''\n",
     "            Heuristics for finding the best position in the path to severe (and substitute).\n",
@@ -338,9 +232,6 @@
     "            \n",
     "            If there is no alternative, it will return None\n",
     "        '''\n",
-    "\n",
-    "#         if path==[3869, 3867]:\n",
-    "#             pdb.set_trace()\n",
     "\n",
     "        # get number of paths passing (value) each edge in the path\n",
     "        pathValues = [self.parentGraph._getEdgeValue(path[i-1],path[i]) for i in range(1,len(path))]\n",
@@ -376,10 +267,6 @@
     "            # Calculate value of current edge in the path\n",
     "            curEdgeValue = pathValues[pathPos]\n",
     "            \n",
-    "            # If it is higher than new substitution, then disregard it, severing it will make our consensus tree worse.\n",
-    "#             if curEdgeValue>newEdgeValue:\n",
-    "#                 continue\n",
-    "            \n",
     "            # Get all incoming edges to the end of the current edge (alternative edges)\n",
     "            allIncomingEdges = list(self.originalGraph.in_edges(curEnd))\n",
     "            \n",
@@ -403,13 +290,8 @@
     "                    continue\n",
     "                    \n",
     "                if altEdge == curEdge:\n",
-    "#                     if curEdgeValue>newEdgeValue:\n",
-    "#                         break\n",
-    "#                     else:\n",
     "                    continue\n",
     "                \n",
-    "#                 if altEdge[0] == 6861:\n",
-    "#                     pdb.set_trace()\n",
     "                if altEdge[1] in processedNodes:\n",
     "                    continue\n",
     "                \n",
@@ -418,7 +300,6 @@
     "                if (nx.has_path(G,path[0],altEdge[0]) \\\n",
     "                    and nx.has_path(G,altEdge[-1],path[-1])) \\\n",
     "                    or (nx.has_path(G,*altEdge[::-1])):\n",
-    "#                     G.add_edge(*curEdge)\n",
     "                    continue\n",
     "                \n",
     "                edgeToSubstitute = altEdge\n",
@@ -452,20 +333,6 @@
     "        for fromNode,toNode in missingLinks:\n",
     "            edgeStatus = self.isBubbleLoop(fromNode,toNode,combinedGraph)\n",
     "            if edgeStatus == -1:\n",
-    "#                 try:\n",
-    "#                     if self.parentGraph.edgePaths[(toNode,fromNode)]>self.parentGraph.edgePaths[(fromNode,toNode)]:\n",
-    "#                         self.loopEdges.add(fromNode,toNode)\n",
-    "#                     else:\n",
-    "#                         self.loopEdges.add(toNode,fromNode)\n",
-    "#                         if self.has_edge(toNode,fromNode):\n",
-    "#                             self.remove_edge(toNode,fromNode)\n",
-    "#                             self.add_edge(fromNode,toNode)\n",
-    "#                         else:\n",
-    "#                             self.bubbleEdges.add(fromNode,toNode)\n",
-    "#                             combinedGraph.add_edge(fromNode,toNode)\n",
-    "#                             processedEdges.append((toNode,fromNode))\n",
-    "#                 except KeyError:\n",
-    "#                     self.loopEdges.add(fromNode,toNode)\n",
     "                self.loopEdges.add(fromNode,toNode)\n",
     "\n",
     "            elif edgeStatus > 0 and (fromNode,toNode) not in processedEdges:\n",
@@ -529,43 +396,7 @@
     "    def draw_original(self):\n",
     "        nx.draw(self.originalGraph,pos=nx.kamada_kawai_layout(self.originalGraph),with_labels=True)\n",
     "    def getRootNodes(self):\n",
-    "        return deepcopy(self.startingNodes)\n",
-    "#         inCond = dict([(node,in_degree==0) for node,in_degree in self.in_degree])\n",
-    "\n",
-    "#         outCond = dict([(node,in_degree!=0) for node,in_degree in self.out_degree])\n",
-    "        \n",
-    "#         rootList = []\n",
-    "        \n",
-    "#         for node,deg_in in inCond.items():\n",
-    "#             if outCond[node] and deg_in:\n",
-    "#                 rootList.append(node)\n",
-    "        \n",
-    "#         if len(rootList)>1:\n",
-    "#             raise AmbigouosRootNode(f'Only 1 root node is expected, but {len(roorList)} are found')\n",
-    "            \n",
-    "#         return rootList[0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 00_init.ipynb.\n",
-      "Converted 01_graph.ipynb.\n",
-      "Converted 02_tree.ipynb.\n",
-      "Converted 03_synteny.ipynb.\n",
-      "Converted 04_utils.ipynb.\n",
-      "Converted index.ipynb.\n"
-     ]
-    }
-   ],
-   "source": [
-    "notebook2script()"
+    "        return deepcopy(self.startingNodes)\n"
    ]
   }
  ],
@@ -574,18 +405,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
