--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -40,7 +40,6 @@
    "outputs": [],
    "source": [
     "#| include: false\n",
-    "# from nbdev.showdoc import *\n",
     "from nbdev import nbdev_export\n",
     "nbdev_export()"
    ]
@@ -53,7 +52,6 @@
    "source": [
     "#| export\n",
     "from collections.abc import Iterable\n",
-    "# from copy import deepcopy\n",
     "import json\n",
     "import numpy as np\n",
     "import os\n",
@@ -61,6 +59,122 @@
     "import joblib\n",
     "\n",
     "from redis import Redis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sequence operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sequence inversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def generateComplementDict(seqType='DNA',isDict=True):\n",
+    "    '''\n",
+    "    The function `generateComplementDict` generates a dictionary\n",
+    "    for complementing the DNA sequence. It can be applied to RNA to identify inverted sequences.\n",
+    "\n",
+    "    `seqType`: str, Can be either 'DNA' or 'RNA' at the moment. If 'DNA', then the complement\n",
+    "    to four known nucleotide (A, C, G, T) will be provided. All other letters (B, D, H, U, N and\n",
+    "    all others) will be translated to N.\n",
+    "    '''\n",
+    "    fromstr = 'ACGTURYKMSWBDHVN-'\n",
+    "    tostr = 'TGCAAYRMKSWVHDBN-'\n",
+    "    if seqType.upper()=='DNA':\n",
+    "        fromLetters = list(fromstr)\n",
+    "        toLetters = list(tostr)\n",
+    "    elif seqType.upper()=='RNA':\n",
+    "        fromLetters = list(fromstr.lower())\n",
+    "        toLetters = list(tostr.lower())\n",
+    "    else:\n",
+    "        raise ValueError(f\"`seqType can be either 'DNA' or 'RNA', but '{seqType}' was given\")\n",
+    "\n",
+    "\n",
+    "    if isDict:\n",
+    "        res = {}\n",
+    "\n",
+    "        for fl,tl in zip(fromLetters,toLetters):\n",
+    "            res[fl] = tl\n",
+    "    else:\n",
+    "        res = str.maketrans(fromLetters,toLetters)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def complementSequence(seq,complementDict='DNA'):\n",
+    "    if isinstance(complementDict,str):\n",
+    "        compDict = generateComplementDict(seqType=complementDict)\n",
+    "    elif isinstance(complementDict,dict):\n",
+    "        compDict = complementDict\n",
+    "    else:\n",
+    "        raise ValueError(f'`complementDict` can be either string \"DNA\" or \"RNA\" or dict, but {type(complementDict)} is given.')\n",
+    "    return seq.translate(str.maketrans(compDict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def reverseSequence(seq):\n",
+    "    return seq[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def inverseSequence(seq,complementDict='DNA'):\n",
+    "    return complementSequence(reverseSequence(seq),complementDict=complementDict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other file operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def checkNodeLengthsFile(GFAPath):\n",
+    "    directory = os.path.dirname(GFAPath)\n",
+    "    filebase = os.path.splitext(os.path.basename(GFAPath))[0]\n",
+    "    nodeLenPath = f'{directory}{os.path.sep}nodeLengths_{filebase}.dat'\n",
+    "    \n",
+    "    if os.path.exists(nodeLenPath):\n",
+    "        return joblib.load(nodeLenPath)\n",
+    "    else:\n",
+    "        return None"
    ]
   },
   {
@@ -217,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Export parameters processing"
+    "## Export parameters processing and validating"
    ]
   },
   {
@@ -420,49 +534,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DB mapping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Not used any more. Redis Schema changed.\n",
-    "def getDBID(pathToDictFile,caseName):\n",
-    "    dbid = None\n",
-    "    if os.path.exists(pathToDictFile):\n",
-    "        caseToDBID = joblib.load(pathToDictFile)\n",
-    "    else:\n",
-    "        caseToDBID = {caseName:0}\n",
-    "        dbid = 0\n",
-    "\n",
-    "    dbid = caseToDBID.get(caseName,None)\n",
-    "\n",
-    "    if dbid is None:\n",
-    "        dbidArray = sorted(list(caseToDBID.values()))\n",
-    "        if dbidArray[0]>0:\n",
-    "            dbid = 0\n",
-    "        else:\n",
-    "            prevID = 0\n",
-    "            if len(dbidArray)>1:\n",
-    "                for curID in dbidArray[1:]:\n",
-    "                    if prevID + 1 < curID:\n",
-    "                        break\n",
-    "                    prevID = curID\n",
-    "            dbid = prevID + 1\n",
-    "        caseToDBID[caseName] = dbid\n",
-    "\n",
-    "    joblib.dump(caseToDBID,pathToDictFile)\n",
-    "\n",
-    "    return dbid"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### DB cleaning and maintenance"
    ]
   },
@@ -474,7 +545,9 @@
    "source": [
     "#| export\n",
     "def resetDB(redisServer='redis',port=6379):\n",
-    "    # os.remove(pathToDictFile)\n",
+    "    '''\n",
+    "    Reset the whole database. Be careful, it is impossible re restore DB once it was flushed.\n",
+    "    '''\n",
     "    conn = Redis(host=redisServer,port=port,db=0)\n",
     "    conn.flushall()\n",
     "    return 0"
@@ -672,262 +745,6 @@
     "        raise DataError(f'Not equal number of starts and ends were deleted from DB. \\\n",
     "        For consistency, the sorted sets {name}Start and {name}End should be checked and/or recreated')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## De Bruijn Graphs experimental functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def processdeBruijnGFA(gfaFile,kmerSize=None,accessionFASTA=None,accessionsToRemove=None):\n",
-    "    baseName = os.path.splitext(os.path.basename(gfaFile))[0]\n",
-    "    dirPath = os.path.dirname(gfaFile)\n",
-    "\n",
-    "    print(f'Loading graph from {gfaFile}')\n",
-    "\n",
-    "    prevPathSegment = None\n",
-    "\n",
-    "    gfaList = open(gfaFile,mode='r').readlines()\n",
-    "\n",
-    "    headerList = gfaList[0].split('\\t')\n",
-    "\n",
-    "    gfaVersion = [el.rstrip() for el in headerList if el[:2]=='VN'][0][5:]\n",
-    "    if kmerSize is None:\n",
-    "        kmerSize = int([el.rstrip() for el in headerList if el[:2]=='KL'][0][5:])\n",
-    "\n",
-    "    if gfaVersion == '2.0':\n",
-    "        raise NotImplementedError('At the moment only GFA v1 is supported')\n",
-    "    elif gfaVersion != '1.0':\n",
-    "        warnings.warn('Cannot identify version of GFA. Assuming it is GFA v1. If it is not, expect unpredictable results.',category=ResourceWarning)\n",
-    "\n",
-    "    segmentList = [el for el in gfaList if el.lower().startswith('s')]\n",
-    "    linkList = [el for el in gfaList if el.lower().startswith('l')]\n",
-    "    pathStringsList = [el for el in gfaList if el.lower().startswith('p')]\n",
-    "\n",
-    "    nodeNameToID = {}\n",
-    "\n",
-    "    nodes = []\n",
-    "    nodesData = []\n",
-    "\n",
-    "    numSegments = len(segmentList)\n",
-    "    numSegmentDigits = int(np.ceil(np.log10(numSegments)))\n",
-    "\n",
-    "    for nodeID,node in enumerate(segmentList):\n",
-    "        print(f'\\rLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
-    "        segmentArray = node.rstrip().split(sep='\\t')\n",
-    "        segID,segGFAData = segmentArray[1:3]\n",
-    "        segSeq = segGFAData\n",
-    "\n",
-    "        segName = str(segID)\n",
-    "\n",
-    "        nodeNameToID[segID] = len(nodes)+1\n",
-    "\n",
-    "        nodes.append(segName)\n",
-    "        nodesData.append(segSeq)\n",
-    "\n",
-    "    print('\\nLoading segments finished.')\n",
-    "\n",
-    "    numLinks = len(linkList)\n",
-    "    numLinkDigits = int(np.ceil(np.log10(numLinks)))\n",
-    "\n",
-    "    forwardLinks = {}\n",
-    "\n",
-    "    for linkID,link in enumerate(linkList):\n",
-    "        print(f'\\rLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
-    "        linkArray = link.rstrip().split(sep='\\t')\n",
-    "        fromNodeID,fromStrand,toNodeID,toStrand = linkArray[1:5]\n",
-    "        fromNode = nodeNameToID[fromNodeID]\n",
-    "        toNode = nodeNameToID[toNodeID]\n",
-    "\n",
-    "        curLink = forwardLinks.setdefault(fromNode,{})\n",
-    "        curStrand = curLink.setdefault(fromStrand,[])\n",
-    "        if (toNode,toStrand) not in curStrand:\n",
-    "            curStrand.append((toNode,toStrand))\n",
-    "    print('\\nLoading links finished')\n",
-    "\n",
-    "    paths = []\n",
-    "    accessions = []\n",
-    "\n",
-    "    numPaths = len(pathStringsList)\n",
-    "    numPathDigits = int(np.ceil(np.log10(numPaths)))\n",
-    "    addedPaths = 0\n",
-    "    ignoredPaths = 0\n",
-    "    for pathID,pathString in enumerate(pathStringsList):\n",
-    "        print(f'\\rLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
-    "        pathArray = pathString.rstrip().split(sep='\\t')\n",
-    "        seqID,path = pathArray[1:3]\n",
-    "        useAccession = True\n",
-    "        if isinstance(accessionsToRemove,list):\n",
-    "            for accessionTemplate in accessionsToRemove:\n",
-    "                if seqID.find(accessionTemplate)!=-1:\n",
-    "                    ignoredPaths += 1\n",
-    "                    useAccession = False\n",
-    "                    break\n",
-    "        if useAccession:\n",
-    "            paths.append(path.split(','))\n",
-    "            accessions.append(seqID)\n",
-    "            addedPaths += 1\n",
-    "    print(f'\\nLoading paths finished. {addedPaths} paths added, {ignoredPaths} paths ignored.')\n",
-    "\n",
-    "    return nodes,nodesData,nodeNameToID,forwardLinks,paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paths = '../../1001G/GraphGeneration/TestingPipelines/data/cuttlefish/out/full_transpose.gfa'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading graph from ../../1001G/GraphGeneration/TestingPipelines/data/cuttlefish/out/full_transpose.gfa\n",
-      "Loading segment 4/4\n",
-      "Loading segments finished.\n",
-      "Loading link 4/4\n",
-      "Loading links finished\n",
-      "Loading path 2/2\n",
-      "Loading paths finished. 2 paths added, 0 paths ignored.\n"
-     ]
-    }
-   ],
-   "source": [
-    "nodes,nodesData,nodeNameToID,forwardLinks,paths = processdeBruijnGFA(paths,kmerSize=30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1059', '695', '5571', '4423']"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def _pathCount(self):\n",
-    "        # self.inPath = []\n",
-    "        # self.outPath = []\n",
-    "        self.nodePass = [0]*len(self.nodes)\n",
-    "        \n",
-    "        self.nodeStrandPaths = [[0,0] for _ in range(len(self.nodes))]\n",
-    "        self.pathStarts = [0]*len(self.nodes)\n",
-    "        self.inPath = [0]*len(self.nodes)\n",
-    "        self.outPath = [0]*len(self.nodes)\n",
-    "        self.edgePaths = {}\n",
-    "        \n",
-    "        for path in self.paths:\n",
-    "            \n",
-    "            previousNode = None\n",
-    "            for nodeStrand in path:\n",
-    "                pathNode = self.nodeNameToID[nodeStrand[:-1]]-1\n",
-    "                pathStrand = int(nodeStrand[-1]=='-') # 0 if \"+\", 1 if \"-\"\n",
-    "                self.nodePass[pathNode] += 1\n",
-    "                self.nodeStrandPaths[pathNode][pathStrand] += 1\n",
-    "                self.outPath[pathNode] += 1\n",
-    "                self.inPath[pathNode] += 1\n",
-    "                if previousNode is not None:\n",
-    "                    self.edgePaths.setdefault((previousNode+1,pathNode+1),0)\n",
-    "                    self.edgePaths[(previousNode+1,pathNode+1)] += 1\n",
-    "                else:\n",
-    "                    self.pathStarts[pathNode] += 1\n",
-    "                    self.inPath[pathNode] -= 1\n",
-    "                previousNode = pathNode\n",
-    "            self.outPath[previousNode] -= 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'1059': 1, '695': 2, '5571': 3, '4423': 4}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nodeNameToID"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: {'-': [(2, '-')]},\n",
-       " 4: {'-': [(3, '-')]},\n",
-       " 2: {'-': [(4, '-')]},\n",
-       " 3: {'-': [(1, '-')]}}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "forwardLinks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['1059-', '695-', '4423-'], ['4423-', '5571-', '1059-']]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
