--- a/deBruijnGraphProcessing.ipynb
+++ b/deBruijnGraphProcessing.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
+   "id": "d6feeca0",
    "metadata": {},
    "source": [
     "---\n",
@@ -40,25 +41,10 @@
    "execution_count": null,
    "id": "conditional-highway",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 00_init.ipynb.\n",
-      "Converted 01_graph.ipynb.\n",
-      "Converted 02_tree.ipynb.\n",
-      "Converted 03_synteny.ipynb.\n",
-      "Converted 04_utils.ipynb.\n",
-      "Converted 05_export.ipynb.\n",
-      "Converted deBruijnGraphProcessing.ipynb.\n",
-      "Converted index.ipynb.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from nbdev.export import notebook2script\n",
-    "notebook2script()"
+    "from nbdev import nbdev_export\n",
+    "nbdev_export()"
    ]
   },
   {
@@ -1827,7 +1813,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
