Fixed error with grah construction from annotation
Fixed error with grah construction from annotation

Fixed error with grah construction from annotation

--- a/03_synteny.ipynb
+++ b/03_synteny.ipynb
@@ -295,7 +295,7 @@
     "                        else:\n",
     "                            orthogroup = generateUID(geneID)\n",
     "                    elif ATmap is not None:\n",
-    "                        orthogroup = ATmap.inverse.get(geneID,generateUID(geneID))\n",
+    "                        orthogroup = ATmap.inverse.get(geneID,[generateUID(geneID)])[0]\n",
     "                    else:\n",
     "                        raise ValueError(f'`similarityIDAssignment` supports only \"gene\" or \"mRNA\", but {similarityIDAssignment} was given and ATmap is not available.')\n",
     "\n",
@@ -323,6 +323,7 @@
     "                    geneSeq = ''\n",
     "                \n",
     "                overlaps = getIDs(annotation.query(bounds=[(start,end)],metadata={'type':'gene'}))\n",
+    "                overlaps = overlaps.remove(geneID)\n",
     "                genes.setdefault(accessionID,[]).append([geneID,orthogroup,seqID,accessionID,chromosome,forward,start+1,end,pStart+1,pEnd,geneSeq,overlaps])\n",
     "                if ATmap is None:\n",
     "                    if len(atNameList[0])>0:\n",
