Cleaned and updated documentation

--- a/00_init.ipynb
+++ b/00_init.ipynb
@@ -8,7 +8,7 @@
     "description: Provides functionality to construct special synteny graph from pangenome\n",
     "  annotation (and actual sequences).\n",
     "output-file: init.html\n",
-    "title: Synteny module\n",
+    "title: Init module\n",
     "\n",
     "---\n",
     "\n"
