--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -572,14 +572,17 @@
     "        constructor. If parameters for more than 1 option is passed, there is a priority queue which constructor follows.\n",
     "        Each option and its priorities are provided below.\n",
     "        \n",
-    "        Priority 1: If you pass gfaPath as actual path to gfa file, then it will be loaded as is. In this case, the \n",
+    "        - Priority 1: If you pass gfaPath as actual path to gfa file, then it will be loaded as is. In this case, the \n",
     "        following options are available: \n",
+    "            \n",
     "            `accessionsToRemove`: list or None (default). If not None, a list of strings, if any of the string contains \n",
     "                                  in pathname, the path will be ignored while loading.\n",
+    "            \n",
     "            `isGFASeq`: boolean (default: True). Whether the graph should be considered as sequence graph (True)\n",
     "                        or as gene/block graph (False).\n",
     "        \n",
-    "        Priority 2: If nodes, links and paths are provided (not None), they should be as following:\n",
+    "        - Priority 2: If nodes, links and paths are provided (not None), they should be as following:\n",
+    "            \n",
     "            `nodes`: list[str]: a list of strings with node IDs (unique)\n",
     "            \n",
     "            `links`: dict{int:dict{str:list[tuple(int,str)]}}: a dict with keys integers with 1-basednode numbers \n",
@@ -593,36 +596,49 @@
     "            {1-based node number} is an integer 1-based number of node using the order as in `nodes`, \n",
     "            {directionality} is either '+' for normal direction, or '-' for inverted.\n",
     "            \n",
-    "        Priority 3: if pathsDict is provided then the graph is created from the paths for multiple accessions.\n",
+    "        - Priority 3: if pathsDict is provided then the graph is created from the paths for multiple accessions.\n",
     "            `pathsDict` is a dict{int:list[str]}; keys are names of accessions, and values are lists of strings\n",
     "            of the following format '{node name}{directionality}', where {node name} is identifiable unique name\n",
     "            which identifies the node, {directionality} is either '+' for normal direction, or '-' for inverted.\n",
     "            Note, that this can create no-sequence graph only (e.g. gene graph). Sequences can be added later on\n",
     "            through adding sequences to GenomeGraph.nodesData list.\n",
+    "            \n",
     "            An extra optional parameter is:\n",
+    "            \n",
     "            `nodeNameLengths`: list[int] or None, a list of alternative node lengths. By default, each node will be \n",
     "                               represented as a single cell/column, but if provided, variable length can be provided.\n",
-    "        Priority 4: If annotationFiles is not None, but is a list of paths to annotation (gff3) files, \n",
+    "        \n",
+    "        - Priority 4: If annotationFiles is not None, but is a list of paths to annotation (gff3) files, \n",
     "        then the following extra options are available:\n",
+    "            \n",
     "            'sequenceFilesDict': a dict{str:str}, where keys are IDs of accessions used in annotation files and value\n",
     "                                is a path to FASTA file (relative to gff files). Assumption is that FASTA sequence names\n",
     "                                are the same as GFF3 sequence names.\n",
+    "            \n",
     "            `pangenomeFiles`: a list[str], a list of GFF3 files for the same intervals as in `annotationFiles`, \n",
     "                            ID fields in GFF2 metadata should be the same.\n",
+    "            \n",
     "            `accOrder`: list or None (default), Order of accessions in the graph. If None, accessions will be sorted in \n",
     "                        alphabetical order.\n",
+    "            \n",
     "            `chromosome`: str or None, if None, create one graph for all chromosomes (not fully implemented, see manual), \n",
     "                        otherwise, create only one graph for given chromosome.\n",
+    "            \n",
     "            `doUS`: boolean (default: False) Add unrelated sequence blocks between annotated genes/blocks.\n",
+    "            \n",
     "            `refAnnotationFile`: str. If given, it has to be a path to gff3 file with reference annotation \n",
     "                                 with reference notation for gene names. In main annotations reference gene names should be identified \n",
     "                                 either in \"gene\" records under \"AT\" key (prioritised), \n",
     "                                 or in \"mRNA\" records under \"Name\" key (fallback). If ATMap is provided, then \n",
+    "            \n",
     "            `refSequenceFile`: str or None (default). If provided with path, then it will be used to obtain \n",
     "                               sequences of each block/gene.\n",
+    "            \n",
     "            `transmapFile`: a tab delimited file with column \"Orthogroup\", which contains similarity ID for genes and a column with name\n",
     "                            given by `transmapFileRefCol` which contains reference annotation gene names.\n",
+    "            \n",
     "            `transmapFileRefCol`: str or None, a name of column for reference gene names in `transmapFile`\n",
+    "            \n",
     "            `refAccession`: str or None (default). Accession ID for reference annotation (should be provided if `refAnnotationFile`\n",
     "                            if provided).\n",
     "\n",
@@ -1083,9 +1099,10 @@
     "        geneAcc = genes[accessionID]\n",
     "        for seqID in seqList:\n",
     "\n",
-    "            p, cigar, usCounter = generatePathsLinks(geneAcc, ATmap, seqID, accessionID, sequences, self.OGList,\n",
+    "            p, cigar, usCounter = generatePathsLinks(geneAcc, ATmap, accessionID, sequences, self.OGList,\n",
     "                                                     self.nodes, self.nodesMetadata, self.nodeNameToID, links,\n",
-    "                                                     self.usCounter, doUS=doUS, segmentData=self.nodesData)\n",
+    "                                                     self.usCounter, chromosomeID = seqID, doUS=doUS, segmentData=self.nodesData)\n",
+    "            \n",
     "            path = path + p + [',<sep>,']\n",
     "\n",
     "        path.pop()\n",
@@ -1136,13 +1153,15 @@
     "    path = []\n",
     "    for seqID in seqList:\n",
     "\n",
-    "        p, cigar, usCounter = generatePathsLinks(genes[accID], ATmap, seqID, accID, sequences, self.OGList,\n",
+    "        p, cigar, usCounter = generatePathsLinks(genes[accID], ATmap, accID, sequences, self.OGList,\n",
     "                                                     self.nodes, self.nodesMetadata, self.nodeNameToID, links,\n",
-    "                                                     self.usCounter, doUS=doUS, segmentData=self.nodesData)\n",
+    "                                                     self.usCounter, chromosomeID = seqID, doUS=doUS, segmentData=self.nodesData)\n",
     "        path = path + p\n",
     "        \n",
     "    self.paths.insert(0,path)\n",
-    "    self.accessions.insert(0,accID)\n"
+    "    self.accessions.insert(0,accID)\n",
+    "    \n",
+    "    return links"
    ]
   },
   {
@@ -1441,7 +1460,7 @@
     "\n",
     "        startNode,endNode = queue.pop()\n",
     "\n",
-    "        if not quiet:\n",
+    "        if not self.quiet:\n",
     "            print(f'\\rNodes in order: {len(self.order)}/{len(self.nodes)}',end='')\n",
     "        else:\n",
     "            if len(self.order) % p1num == 0:\n",
