Fixed bug with paths2graph script (forgot quotes).

--- a/06_scripts.ipynb
+++ b/06_scripts.ipynb
@@ -223,7 +223,7 @@
     "    \n",
     "    outputpath = params[\"outputpath\"].rstrip(\"/\").rstrip(\"\\\\\")\n",
     "    \n",
-    "    outputbase = f'{outputpath}{os.path.sep}{params[outputBasename]}'\n",
+    "    outputbase = f'{outputpath}{os.path.sep}{params[\"outputBasename\"]}'\n",
     "    \n",
     "    if pathFiles in params:\n",
     "    \n",
