Fixed another bug with paths2graph script (another quotes).

--- a/06_scripts.ipynb
+++ b/06_scripts.ipynb
@@ -225,7 +225,7 @@
     "    \n",
     "    outputbase = f'{outputpath}{os.path.sep}{params[\"outputBasename\"]}'\n",
     "    \n",
-    "    if pathFiles in params:\n",
+    "    if 'pathFiles' in params:\n",
     "    \n",
     "        # For v1\n",
     "        for seqName,pathfile in params['pathFiles'].items(): \n",
